# rpi_arduino

./: .gitignore  CODE_OF_CONDUCT.md  Diagram1.dia.autosave  LICENSE.md  README.md  Readme.md
FreeRTOS_POSIX_Server/: README.md  main.c
FreeRTOS_POSIX_Server/ArduinoWebserver/: packet.c  packet.h
FreeRTOS_POSIX_Server/Debug/: makefile  sources.mk  subdir.mk
FreeRTOS_POSIX_Server/Debug/ArduinoWebserver/: subdir.mk
FreeRTOS_POSIX_Server/Debug/AsyncIO/: subdir.mk
FreeRTOS_POSIX_Server/Debug/FileIO/: subdir.mk
FreeRTOS_POSIX_Server/Debug/FreeRTOS_Kernel/: subdir.mk
FreeRTOS_POSIX_Server/Debug/Kernel_Common/: subdir.mk
FreeRTOS_POSIX_Server/Utils/: ip_parser.c  ip_parser.h  network.c  network.h  plf.h
arduino/: README.md  Readme.md  aconfigure  cconfigure  configure  sconfigure
arduino/schematic/: schematic.fzz
arduino/source/arduino_src/: CMakeLists.txt  run_cmake
arduino/source/arduino_src/schematic/: schematic.fzz
arduino/source/arduino_src/scripts/: sbuild  senv  supload
arduino/source/arduino_src/src/: adc.c  adc.h  cmd_get.c  cmd_get.h  dio.c  dio.h  fsm.c  generic_cmd_t.c  generic_cmd_t.h  generic_t.h  main.c  pmw.c  rtos.c  rtos.h
arduino/source/arduino_src/src/freeRTOS/: FreeRTOSBoardDefs.h  FreeRTOSConfig.h  hooks.c
arduino/source/arduino_src/src/freeRTOS/lib_io/: digitalAnalog.c  digitalAnalog.h  ringBuffer.h  serial.c  serial.h  servoPWM.c  servoPWM.h
arduino/source/arduino_src/src/utils/: utils.c  utils.h
media/: smartHome.dia
mgr/: mgr.py  mgr_serial.py  mgr_socket.py  socket_tools.py
nginx/sites-available/: server
pi/: README.md  piconfigure
pi/gui/: constants.py  serialcom.py  smarthome.py  soundplayer.py  styles.py
pi/pi_server/: wsgi
presentation/: README.md  smartHomePresentation.html
www/backend/: server_app.ini  server_app.py  server_debug
(+86 files in other folders)
